# gza

./: .gitignore  AGENTS.md  HATCH_VCS_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  README_PYPI.md  REVIEW.md  check_cli_syntax.py  gza.local.yaml.example  gza.yaml  pyproject.toml  test_multiple_workers.py  test_plan_persistence.py  theo.yaml  validate_syntax.py  verify_syntax.py
.theo/: Dockerfile.claude  theo.db
checks/: __main__.py  failure_reason_ownership.py  no_direct_taskstore_queries.py  no_stdlib_monkeypatch.py  unit_suite_boundary.py
docs/: configuration.md  docker.md  merge-policy.md  quickstart.md  skills.md  tmux.md  workflow.md
etc/: Dockerfile.claude  Dockerfile.codex
reviews/: 20260212182211-code-review-full.md  20260213112605-docs-review.md  20260306001005-docs-review.md  20260306002729-spec-review.md  20260315113303-docs-review.md  20260315130000-code-review-full-opus-4-6.md  20260602003648-behavior-check.md  20260603213104-behavior-check.md  20260611080523-behavior-check.md  20260613194242-behavior-check.md  20260618065400-behavior-check.md  20260618084043-behavior-check.md  20260618191600-behavior-check.md  20260619201613-behavior-check.md  20260622152116-behavior-check.md  20260623042343-behavior-check.md  20260623223028-behavior-check.md  20260624044154-behavior-check.md  20260624070036-behavior-check.md  20260625020912-behavior-check.md  20260625090011-behavior-check.md  20260625090011-spec-coherence.md  20260626003945-behavior-check.md  20260626022751-behavior-check.md  20260626195405-behavior-check.md  20260626204444-behavior-check.md  (+1 more)
(+509 files in other folders)
