[project]
name = "gza-agent"
version = "0.0.1"
description = "A coding AI agent runner for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
]

[project.scripts]
gza = "theo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires credentials and Docker)",
]
